--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DeVeDe</title>
+    <link rel="stylesheet" href="devede.css">
 </head>
 <body>
     
+    <script src="devede.js"></script>
 </body>
 </html>
