--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="devede.css">
 </head>
 <body>
-    
-    <script src="devede.js"></script>
+    <header>
+        <h1>DeVeDe Database!</h1>
+    </header>
+    <script type="module" src="devede.js"></script>
 </body>
 </html>
