--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <header>
         <h1>DeVeDe Database!</h1>
     </header>
+    <main>
+        
+        <div class="inputFields">
+            <input type="text" placeholder="title"> 
+            <input type="text" placeholder="genre"> 
+            <input type="text" placeholder="utgivningsdatum">
+        </div> 
+
+        <div class="addShow">
+            <button>Add movie to favorites</button>
+            <button>Show all saved favorites</button>
+        </div>
+
+    </main>
+
     <script type="module" src="devede.js"></script>
 </body>
 </html>
