--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1>DeVeDe Database!</h1>
     </header>
     <main>
-        
+
         <div class="inputFields">
-            <input type="text" placeholder="title"> 
-            <input type="text" placeholder="genre"> 
-            <input type="text" placeholder="utgivningsdatum">
+            <input id="title" type="text" placeholder="Title"> 
+            <input id="genre" type="text" placeholder="Genre"> 
+            <input id="date" type="text" placeholder="Release Date">
         </div> 
 
         <div class="addShow">
-            <button>Add movie to favorites</button>
-            <button>Show all saved favorites</button>
+            <button id="addFav" >Add movie to favorites</button>
+            <button id="showFav" >Show all favorites</button>
         </div>
 
     </main>
@@ -29,3 +29,10 @@
     <script type="module" src="devede.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
