--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         </div>
 
     </main>
+    
+    <section id="favMovies"></section>
 
     <script type="module" src="devede.js"></script>
 </body>
