--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="inputFields">
             <input id="title" type="text" placeholder="Title"> 
             <input id="genre" type="text" placeholder="Genre"> 
-            <input id="date" type="text" placeholder="Release Date">
+            <input id="date" type="number" placeholder="Release Year">
         </div> 
 
         <div class="addShow">
