Godkänd nivå uppnådd
Add movie check
show favorites check
remove favorites check

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>DeVeDe Database!</h1>
     </header>
     <main>
-
+      
         <div class="inputFields">
             <input id="title" type="text" placeholder="Title"> 
             <input id="genre" type="text" placeholder="Genre"> 
@@ -26,7 +26,9 @@
 
     </main>
     
-    <section id="favMovies"></section>
+    <section id="favMovies">
+        <button id="backBtn">Take me Back</button>
+    </section>
 
     <script type="module" src="devede.js"></script>
 </body>
