CSS Done. Still need fix Query.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>DeVeDe Database!</h1>
+        <h1>DVDd</h1>
     </header>
     <main>
       
@@ -27,9 +27,20 @@
     </main>
     
     <section id="favMovies">
-        <button id="backBtn">Take me Back</button>
     </section>
 
+    <div class="return">
+     <button id="backBtn">Take me Back</button>
+    </div>
+    <footer>
+
+        <h4></h4>
+        <div class="queryEl">
+            <input id="query" type="text" placeholder="Search Movies"> 
+            <button id="queryBtn">Check database</button>
+         </div>
+
+    </footer>
     <script type="module" src="devede.js"></script>
 </body>
 </html>
