--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
      <button id="backBtn">Take me Back</button>
     </div>
     <footer>
-
+        
         <h4></h4>
+        <div class="queryFav">
+            <div class="qContainer"></div>
+        </div>
         <div class="queryEl">
             <input id="query" type="text" placeholder="Search Movies"> 
             <button id="queryBtn">Check database</button>
